--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-“name”: “streamr-m3tering-viewer”,
-“version”: “1.0.0”,
-“description”: “Real-time Streamr M3tering data stream viewer”,
-“main”: “server.js”,
-“scripts”: {
-“start”: “node server.js”,
-“dev”: “node server.js”
-},
-“keywords”: [“streamr”, “websocket”, “real-time”],
-“author”: “”,
-“license”: “MIT”,
-“dependencies”: {
-“@streamr/sdk”: “^101.0.0”,
-“express”: “^4.18.2”,
-“ws”: “^8.14.2”
-}
+	"name": "streamr-m3tering-viewer",
+	"version": "1.0.0",
+	"description": "Real-time Streamr M3tering data stream viewer",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"dev": "node server.js"
+	},
+	"keywords": ["streamr", "websocket", "real-time"],
+	"author": "",
+	"license": "MIT",
+	"dependencies": {
+		"@streamr/sdk": "^101.0.0",
+		"express": "^4.18.2",
+		"ws": "^8.14.2"
+	}
 }
